# daos-benchmarks

./: CMakeLists.txt  daos_startup.sh  singlenode-bench-run.sh
config/: random-read-exp.sh  sequential-read-exp.sh
